k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-user-deployment
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-user
  template:
    metadata:
      labels:
        app: ms-user
    spec:
      containers:
        - image: gh6987/rso-user:ms-user-2024-01-04-23-47-05 #to be changed
          name: ms-user
          ports:
            - containerPort: 8081
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: ms-user
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: ms-user
