k8s/ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zapeljise-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ms-ride(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ms-ride
                port:
                  number: 8080
          - path: /ms-user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ms-user
                port:
                  number: 8081
